Apply .gitignore rules

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <a href="index.html" class="nav-btn active">Dashboard</a>
     <a href="calendar.html" class="nav-btn">Calendar</a>
     <a href="notes.html" class="nav-btn">Notes</a>
+        <!-- Add this to your navbar in index.html -->
+    <a href="login.html" class="nav-btn">Login</a>
+    <a href="faq.html" class="nav-btn">FAQ</a>
   </nav>
 
   <main>
@@ -28,11 +31,17 @@
       <p>Stay on top of your academic goals</p>
     </section>
 
-    <section class="date-quote">
-      <h3>Monday, July 7, 2025</h3>
-      <blockquote>
-        "Your education is a dress rehearsal for a life that is yours to lead. – Nora Ephron"
-      </blockquote>
+    <section class="date-quote enhanced-quote">
+      <div class="quote-card">
+        <div class="quote-header">
+          <span class="quote-date">📅 Monday, July 7, 2025</span>
+        </div>
+        <blockquote>
+          <span class="quote">
+          "Your education is a dress rehearsal for a life that is yours to lead"</span>
+          <span class="quote-author">– Nora Ephron</span>
+        </blockquote>
+      </div>
     </section>
 
     <section class="task-cards">
